--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,5 @@
 [metadata]
 description-file = README.md
+classifiers =
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
